Kubernetes Ingress and Config Advanced/manifests/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostel-frontend
spec:
  replicas: 2
  selector:
    matchLabels: { app: hostel-frontend }
  template:
    metadata:
      labels: { app: hostel-frontend }
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports: [{ containerPort: 80 }]
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap: { name: hostel-frontend-html }
---
apiVersion: v1
kind: Service
metadata:
  name: hostel-frontend
spec:
  selector: { app: hostel-frontend }
  ports: [{ port: 80, targetPort: 80 }]
